--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "express": "^4.18.2",
     "express-ejs-layouts": "^2.5.1",
     "express-session": "^1.17.3",
+    "markdown": "^0.5.0",
     "method-override": "^3.0.0",
+    "mkdirp": "^3.0.1",
     "mongoose": "^7.0.0",
     "morgan": "^1.10.0",
     "punycode": "^2.3.1",
