--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express": "^4.18.2",
     "express-ejs-layouts": "^2.5.1",
     "express-session": "^1.17.3",
+    "front-matter": "^4.0.2",
     "markdown": "^0.5.0",
     "method-override": "^3.0.0",
     "mkdirp": "^3.0.1",
