--- a/package.json
+++ b/package.json
@@ -16,13 +16,17 @@
   "author": "Rob Raisch <raisch@gmail.com>",
   "license": "SEE LICENSE IN LICENSE",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "connect-flash": "^0.1.1",
+    "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
     "express-ejs-layouts": "^2.5.1",
     "express-session": "^1.17.3",
     "front-matter": "^4.0.2",
+    "jsonwebtoken": "^9.0.2",
+    "lodash": "^4.17.21",
     "markdown": "^0.5.0",
     "method-override": "^3.0.0",
     "mkdirp": "^3.0.1",
