--- a/server/.env-example
+++ b/server/.env-example
@@ -1,6 +1,15 @@
 # set location of mongodb and the database to use.
 MONGODB_URI="mongodb://localhost/ligerbots-admin"
+
 # set the port to run the server on.
 PORT="3000"
+
 # set the environment to run the server in.
 NODE_ENV="development" # change to "production" for production
+
+# Express session key
+SECRET_KEY="[[CHANGE ME]]"
+
+# JWT Secret - run `node -p "require('crypto').randomBytes(35).toString('hex')"`
+JWT_SECRET="[[CHANGE ME TO 35 RANDOM BYTES IN HEX]]"
+
