--- a/server/.env-example
+++ b/server/.env-example
@@ -8,7 +8,7 @@ PORT="3000"
 NODE_ENV="development" # change to "production" for production
 
 # Express session key
-SECRET_KEY="[[CHANGE ME]]"
+SECRET_KEY="[[CHANGE ME]]" # like L1g3rB0tsF0rTh3W1n
 
 # JWT Secret - run `node -p "require('crypto').randomBytes(35).toString('hex')"`
 JWT_SECRET="[[CHANGE ME TO 35 RANDOM BYTES IN HEX]]"
