--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express-ejs-layouts": "^2.5.1",
     "express-session": "^1.17.3",
     "front-matter": "^4.0.2",
+    "json-stringify-safe": "^5.0.1",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "markdown": "^0.5.0",
